--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "ai": "^5.0.9",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.11.0",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,8 +57,11 @@
     "express-validator": "latest",
     "geist": "^1.3.1",
     "helmet": "latest",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "latest",
+    "jspdf": "^3.0.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "mongoose": "latest",
     "morgan": "latest",
@@ -68,6 +72,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.60.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-to-print": "^3.1.1",
     "recharts": "latest",
@@ -79,6 +84,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
